force-app/main/default/objects/RTL_Home_Campaign_Manage_Button__mdt/RTL_Home_Campaign_Manage_Button__mdt.object-meta.xml
<CustomObject>
    <label>Home Campaign Manage Button</label>
    <pluralLabel>Home Campaign Manage Button</pluralLabel>
</CustomObject>