force-app/main/default/objects/RTL_Home_Campaign_Manage_Button__mdt/fields/BranchOnly__c.field-meta.xml
<CustomField>
    <fullName>BranchOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Branch Only</label>
    <type>Checkbox</type>
</CustomField>