force-app/main/default/objects/RTL_Home_Campaign_Manage_Button__mdt/fields/CampaignTable__c.field-meta.xml
<CustomField>
    <fullName>CampaignTable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CampaignTable</label>
    <type>Checkbox</type>
</CustomField>