force-app/main/default/objects/RTL_Home_Campaign_Manage_Button__mdt/fields/PendingCall__c.field-meta.xml
<CustomField>
    <fullName>PendingCall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PendingCall</label>
    <type>Checkbox</type>
</CustomField>