force-app/main/default/objects/RTL_Home_Campaign_Manage_Button__mdt/fields/Reassign__c.field-meta.xml
<CustomField>
    <fullName>Reassign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reassign</label>
    <type>Checkbox</type>
</CustomField>