force-app/main/default/objects/RTL_Home_Campaign_Manage_Button__mdt/fields/ZoneOnly__c.field-meta.xml
<CustomField>
    <fullName>ZoneOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zone Only</label>
    <type>Checkbox</type>
</CustomField>